# py-pgatk

./: .gitignore  .travis.yml  CHANGELOG.md  DBsearch.nf  Dockerfile  GetCanonicalPepFasta.py  GetENSEMBLFiles.py  MANIFEST.in  README.md  README.rst  conda-enviroment.yaml  digest_mutant_protein.py  mutation2proteindb.py  pypgatk.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: changelog.yml  pythonapp.yml  pythonpackage.yml  pythonpublish.yml
cgenomes/: cbioportal_downloader.py  cgenomes_proteindb.py  cosmic_downloader.py  models.py
config/: cbioportal_downloader_config.yaml  cosmic_config.yaml  cosmic_downloader_config.yaml  ensembl_config.yaml  ensembl_downloader_config.yaml
data/qc/: PNNL_iontrap_QuaMeter.tsv  PNNL_iontrap_validation.csv  PNNL_orbi_QuaMeter.tsv  PNNL_orbi_validation.csv  PNNL_velos_QuaMeter.tsv  PNNL_velos_validation.csv  TCGA_QuaMeter.tsv  TCGA_psms.csv
db/: 3frame_translation.py  COSMIC2proteindb.py  TranscriptstoProteinDB.py  TranslateVariants.py  VCFtoProteinDB.py  VCFtoProteinDB.py_old  cBioportal2proteindb.py  digest_mutant_protein.py  get_ensembl_files.py  map_peptide2genome.py  mutation2proteindb.py
ensembl/: data_downloader.py  ensembl.py  exceptions.py  models.py
pipelines/: ensembl_data_downloader.py
pypgatk/: __init__.py  protein-decoy.fa  pypgatk.py  pypgatk_cli.py  pypgatkc.py
pypgatk/cgenomes/: cbioportal_downloader.py  cgenomes_proteindb.py  cosmic_downloader.py  models.py
pypgatk/commands/: blast_get_position.py  cbioportal_downloader.py  cbioportal_to_proteindb.py  cosmic_downloader.py  cosmic_to_proteindb.py  deeplc.py  deeplc_predict.py  dnaseq_to_proteindb.py  ensembl_database.py  ensembl_downloader.py  get_subpos.py  msrescore.py  msrescore_configuration.py  mzTab_class_fdr.py  mztab_class_fdr.py  peptide_class_fdr.py  predictive tool filter.py  proteindb_decoy.py  proteindb_decoy_full.py  threeframe_translation.py  utils.py  validate_peptides.py  vcf_to_proteindb.py
pypgatk/config/: cbioportal_config.yaml  cosmic_config.yaml  ensembl_config.yaml  ensembl_downloader_config.yaml  openms_analysis.yaml  protein_decoy.yaml
pypgatk/db/: digest_mutant_protein.py  map_peptide2genome.py
pypgatk/ensembl/: data_downloader.py  ensembl.py  exceptions.py
pypgatk/mztab/: schemas.py
pypgatk/proteogenomics/: blast_get_position.py  deeplc_predict.py  mzTab_class_fdr.py  mztab_class_fdr.py  spectrumai.py  validate_peptides.py
pypgatk/proteomics/: models.py  openms.py
pypgatk/spectrumAI/: get_position.py  mzTab_class_fdr.py  validate_peptides.py
pypgatk/subpos/: get_subpos.py
pypgatk/testdata/: Meleagris_gallopavo.Turkey_5.1.ncrna.fa  output_decoy.fa  paac_jhu_2014.tar  proteindb_from_CDSs_DNAseq.fa  proteindb_from_ENSEMBL_VCF-clean.fa  proteindb_from_ENSEMBL_VCF.fa  proteindb_from_altORFs_DNAseq.fa  proteindb_from_custom_VCF.fa  proteindb_from_gnomad_VCF.fa  proteindb_from_lncRNAs_DNAseq.fa  proteindb_from_ncRNAs_DNAseq.fa  proteindb_from_pseudogenes_DNAseq.fa  proteindb_from_sncRNAs_DNAseq.fa  psms_with_single_missmatch.tsv  test.db  test.vcf  test_blast_psms.tsv  test_blast_psms_out.tsv  test_blast_reference_database.fa  test_blast_validate.mzML  test_blast_validate_psms.tsv  test_blast_validate_psms_out.tsv  test_cbioportal_data_clinical_sample.txt  test_cbioportal_data_mutations_mskcc.txt  test_cbioportal_data_mutations_mskcc_proteindb.fa  test_cbioportal_data_mutations_mskcc_proteindb_BladderCancer.fa  test_cbioportal_genes.fa  test_cosmic_genes.fa  test_cosmic_mutations.tsv  test_gencode.db  (+13 more)
qc/: README.md  export.py  manuscript_data.py  outlier.py  preprocess.py  qc_analysis.py  qcml.py  template.html  to_html.xsl  visualize.py
testdata/: proteindb.fa  proteindb_from_altORFs_DNAseq.fa  test.db  test.fa  test.gtf  test_gencode.gtf  test_transcripts.fa
tests/: pypgatk_tests.py  test.gtf
toolbox/: exceptions.py  general.py  rest.py
(+8 files in other folders)
