[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypgatk"
version = "0.0.26"
description = "Python tools for proteogenomics"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
    {name = "PgAtk Team", email = "ypriverol@gmail.com"}
]
maintainers = [
    {name = "PgAtk Team", email = "ypriverol@gmail.com"}
]
keywords = ["proteogenomics", "bioinformatics", "proteomics", "genomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "biopython>=1.79,<2.0",
    "Click>=8.0,<9.0",
    "gffutils>=0.10,<1.0",
    "numpy>=1.20,<2.0",
    "pandas>=1.3,<3.0",
    "PyYAML>=5.4,<7.0",
    "requests>=2.25,<3.0",
    "simplejson>=3.17,<4.0",
    "ratelimit>=2.2,<3.0",
    "pyteomics>=4.5,<5.0",
    "pathos>=0.2.8,<1.0",
    "pybedtools>=0.9,<1.0",
    "pyopenms>=3.2,<4.0",
    "matplotlib>=3.3,<4.0",
    "tqdm>=4.60,<5.0",
    "pyahocorasick>=1.4,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8.0",
    "flake8>=4.0,<7.0",
    "pytest-cov>=3.0,<5.0",
]

[project.scripts]
pypgatk = "pypgatk.pypgatkc:main"

[project.urls]
Homepage = "http://github.com/bigbio/py-pgatk"
Documentation = "https://pgatk.readthedocs.io/en/latest"
Repository = "http://github.com/bigbio/py-pgatk"
Issues = "http://github.com/bigbio/py-pgatk/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pypgatk*"]
exclude = ["tests*", "*.tests*", "*.tests.*", "tests.*"]

[tool.setuptools.package-data]
pypgatk = ["config/*.yaml", "config/*.json"]

